Update 'backend-tests-go-enibxega' component image to: quay.io/rhtap_qe/backend-tests-go-enibxega:a571cdbf982880e6e73d618e1da7005267e34f2d@sha256:c4b3b51f6c9c4032c45685bd03fd496cdee781feef8d5c2cb12940d2e546750c

--- a/components/backend-tests-go-enibxega/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-enibxega/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-enibxega
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-enibxega:a571cdbf982880e6e73d618e1da7005267e34f2d@sha256:c4b3b51f6c9c4032c45685bd03fd496cdee781feef8d5c2cb12940d2e546750c
+          name: container-image
